[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/theme/ui_theme.tres" type="Theme" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -280.0
margin_right = 206.0
margin_bottom = -82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 191.0
alignment = 1

[node name="BtnPlay" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 42.0
text = "Play"

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 128.0
margin_bottom = 110.0
rect_min_size = Vector2( 128, 64 )

[node name="BtnCredits" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 128.0
margin_bottom = 138.0
text = "Credits"

[node name="BtnQuit" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 128.0
margin_bottom = 166.0
text = "Exit"

[node name="PanelContainer2" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -288.0
margin_top = 64.0
margin_right = -146.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 135.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="PanelContainer2/CenterContainer"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
text = "MiniNautilus"
align = 1
valign = 1

[node name="PanelContainer3" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -352.0
margin_top = -120.0
margin_right = -109.0
margin_bottom = -74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 318.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="PanelContainer3/CenterContainer"]
margin_right = 311.0
margin_bottom = 39.0
rect_min_size = Vector2( 128, 32 )
text = "A game made by QueenOfSquiggles
For Godot Wild Jam #41"
align = 1
valign = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/BtnPlay" to="." method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BtnCredits" to="." method="_on_BtnCredits_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
